fix 100vh issue on mobile

--- a/src/app/components/map.css
+++ b/src/app/components/map.css
@@ -1,18 +1,20 @@
 .mapWrapper {
-  height: 50vh;
+  height: 50%;
 }
 
 .mapView {
   width: 100vw;
-  height: 50vh;
+  height: 50%;
   position: fixed;
+  transform: translate3d(0, 0, 0);
 }
 
 .contentView {
   position: absolute;
-  height: 50vh;
+  height: 50%;
   padding: 10px 8px;
-  overflow: scroll;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 .contentView > div:last-child {
